// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShareButton stories snapshot > CustomStyling story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <button
    aria-label="Share"
    class="w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 bg-blue-600 hover:bg-blue-700 text-white"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
      />
      <polyline
        points="16 6 12 2 8 6"
      />
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="15"
      />
    </svg>
  </button>
</div>
`;

exports[`ShareButton stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <button
    aria-label="Share"
    class="bg-background w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
      />
      <polyline
        points="16 6 12 2 8 6"
      />
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="15"
      />
    </svg>
  </button>
</div>
`;

exports[`ShareButton stories snapshot > InProductCard story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <div
    class="w-64 p-4 border rounded-none"
  >
    <div
      class="mb-4"
    >
      <div
        class="w-full h-48 bg-muted rounded mb-2"
      />
      <h3
        class="font-semibold text-lg"
      >
        Premium Cotton T-Shirt
      </h3>
      <p
        class="text-sm text-muted-foreground mb-2"
      >
        $29.99
      </p>
    </div>
    <div
      class="flex justify-between items-center"
    >
      <button
        aria-label="Share"
        class="bg-background w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 text-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
          />
          <polyline
            points="16 6 12 2 8 6"
          />
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="15"
          />
        </svg>
      </button>
      <button
        class="px-4 py-2 bg-primary text-primary-foreground rounded"
      >
        Add to Cart
      </button>
    </div>
  </div>
</div>
`;

exports[`ShareButton stories snapshot > LimitedProviders story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <button
    aria-label="Share"
    class="bg-background w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
      />
      <polyline
        points="16 6 12 2 8 6"
      />
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="15"
      />
    </svg>
  </button>
</div>
`;

exports[`ShareButton stories snapshot > NoProviders story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <button
    aria-label="Share"
    class="bg-background w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
      />
      <polyline
        points="16 6 12 2 8 6"
      />
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="15"
      />
    </svg>
  </button>
</div>
`;

exports[`ShareButton stories snapshot > SingleProvider story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <button
    aria-label="Share"
    class="bg-background w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
      />
      <polyline
        points="16 6 12 2 8 6"
      />
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="15"
      />
    </svg>
  </button>
</div>
`;

exports[`ShareButton stories snapshot > WithCustomProduct story renders and matches snapshot 1`] = `
<div
  data-share-harness="true"
>
  <button
    aria-label="Share"
    class="bg-background w-9 h-9 p-2 shadow-md flex items-center justify-center transition-all duration-200 ease-in-out border-0 cursor-pointer focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="w-5 h-5 text-muted-foreground transition-all duration-200 ease-in-out"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
    >
      <path
        d="M4 12v8a2 2 0 002 2h12a2 2 0 002-2v-8"
      />
      <polyline
        points="16 6 12 2 8 6"
      />
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="15"
      />
    </svg>
  </button>
</div>
`;
